--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "scripts": {
     "compile": "solcjs --bin --abi --include-path node_modules/ --base-path . -o . SimpleStorage.sol"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3"
   }
 }
